<resources>
    <string name="app_name">JohnnyTube</string>
    <string name="developer_key">AIzaSyDUEZRDVEZobaKU3EfJ-HARTLP0j3wT7hs</string>
    <string name="title_activity_player">Player</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_help">Hľadaj videá na YouTube</string>
    <string name="search_progress">Vyhľadávam videá pre: </string>
    <string name="str_settings">Nastavenia</string>
    <string name="str_info">Informácie</string>
    <string name="str_exit">Koniec</string>
    <string name="close">Zavrieť</string>
    <string name="conn_err">Chyba v spojení</string>
    <string name="language">Jazyk:</string>
    <string name="cancel">Zrušiť</string>
    <string name="save">Uložiť</string>
    <string name="author">Autor:</string>
    <string name="created">Vytvorené:</string>
    <string-array name="languages">
        <item>Slovenský</item>
        <item>English</item>
    </string-array>
</resources>
